--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-*/
+#ignore everything
+/*
+#don't ignore the example
 !example_output/
-.env
+#don't ignore these files
+!frontPage.py
+!main.py
+!other.py
+!store.py
